# spectral

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
beam/: .gitignore  erl_crash.dump  gleam.toml  manifest.toml
beam/admin/: gleam.toml
beam/admin/src/: admin.gleam
beam/admin/src/admin/: router.gleam  views.gleam
beam/admin/test/: admin_test.gleam
beam/gen_prism/: gleam.toml
beam/gen_prism/src/: gen_prism.gleam
beam/gen_prism/src/gen_prism/: runtime.gleam
beam/gen_prism/test/: gen_prism_test.gleam
beam/native/: Makefile  optics_prism.mod  prism.f90  prism_nif.c
beam/src/: conversation_beam.gleam  conversation_nif.erl  conversation_prism_nif.erl  crypto_ffi.erl  domain_server.erl  loader_ffi.erl
beam/src/conversation/: boot.gleam  coincidence.gleam  compiler.gleam  domain.gleam  garden.gleam  grammar.gleam  key.gleam  loader.gleam  nif.gleam  oid.gleam  prism.gleam  protocol.gleam  ref.gleam  runtime.gleam  supervisor.gleam  trace.gleam
beam/test/: boot_test.gleam  coincidence_server_test.gleam  coincidence_test.gleam  compiler_test.gleam  conversation_beam_test.gleam  garden_test.gleam  key_test.gleam  nif_test.gleam  oid_test.gleam  prism_test.gleam  property_boot_test.gleam  property_wire_test.gleam  ref_test.gleam  supervisor_test.gleam  trace_test.gleam
benches/: hook_latency.rs  spectral_init.rs
claude-code/: settings.json
crates/gestalt/: Cargo.toml
crates/gestalt/src/: detect.rs  document.rs  dom.rs  domain.rs  eigenvalue.rs  encode.rs  form.rs  fragment.rs  graph.rs  lib.rs  line.rs  mirror_domain.rs  panel.rs  semantic.rs  spectral.rs  token.rs
crates/ui/: Cargo.toml
crates/ui/benches/: superposition.rs
crates/ui/src/: buffer.rs  context.rs  field.rs  lib.rs  mote.rs  pass.rs  program.rs  superposition.rs
crates/ui/src/wgsl/: arc.wgsl  mote.wgsl
crates/ui/tests/: integration.rs
crates/witness-rs/: Cargo.toml
crates/witness-rs/src/: lib.rs
docs/: care-model.md  garden-surface.md  gen_prism.md  git-native-graph-plan-phase-1-notes.md  git-native-graph-plan-phase-2-notes.md  git-native-graph-plan-phase-3-notes.md  git-native-graph-plan-phase-4-notes.md  git-native-graph-plan.md  memory-layer-analysis.md  mirror-nl-interface-mapping.md  plan.md  threat-model.md
docs/specs/: absorb-lens.md  glint-prism.md  sign-verify.md  spec-files.md  tui-v0.md
docs/superpowers/plans/: 2026-04-06-spectral-binary-v2.md  2026-04-15-grammar-codegen.md
docs/superpowers/specs/: 2026-04-29-gestalt-mirror-unification-design.md  2026-04-30-gestalt-fragment-spec.md
garden/: benchmark.mirror
src/: diff.rs  lib.rs  log.rs  main.rs  memory.rs  observe.rs  refs.rs  sel.rs  serve.rs  session.rs
src/apache2/: graph_cache.rs  identity.rs  inference.rs  init.rs  loss.rs  mod.rs  observe.rs  runtime.rs  signal.rs  views.rs
src/sel/: e2e_tests.rs  fate_actor.rs  hooks.rs  join.rs  llm.rs  matrix.rs  mod.rs  nl_integration_test.rs  peer.rs  pipeline.rs  reflection.rs  shatter_model.rs  surface.rs  training.rs  tui.rs  weight_file.rs
src/sel/mcp/: cascade.rs  compiler.rs  integration_tests.rs  lsp.rs  memory.rs  mod.rs  optics.rs  server.rs  supervisor.rs  tools.rs
tests/: agent_memory.rs  apache2_standalone.rs  join_test.rs  license_boundary.rs  ops.rs  session.rs
