[package]
name = "spectral-ui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "GPU rendering layer for the spectral eigenboard — wgpu-based mote field visualization"

[dependencies]
wgpu = { version = "22", features = ["wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

[dev-dependencies]
